--- a/P006783.opf/meta.yml
+++ b/P006783.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W22092
   title: སྤར་ཁའི་གཏོ་བརྒྱད་དང་གཏོ་ཐབས་སྐོར།
   author: ''
-  volumes: {}
+  volumes:
+    ed90e5f4af954cadbc0c2b91b031d017:
+      image_group_id: I1KG9798
+      title: ''
+      volume_number: 1
+      total_pages: 540
