--- a/P006783.opf/layers/v001/Pagination.yml
+++ b/P006783.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 1a90dd34cbf44ae889c38489c636d18a
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   3e6193053d5b47e88f0f2d39ab767f2e:
