--- a/P006783.opf/meta.yml
+++ b/P006783.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P006783
 initial_creation_type: ocr
+created_at: 25/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W22092
   title: སྤར་ཁའི་གཏོ་བརྒྱད་དང་གཏོ་ཐབས་སྐོར།
